--- a/_posts/2019-00-05-CS224n-notes-0x01.md
+++ b/_posts/2019-00-05-CS224n-notes-0x01.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "cs224n 0x01"
+title:      "cs224n lecture2"
 subtitle:   " \"word2vec basic concept\""
 date:       2019-09-05 20:00:00
 author:     "Rumia"
@@ -23,5 +23,7 @@ tags:
 
 - 什么是词嵌入？
 
-  自然语言不像图像信息一样，自然语言的基本单位是文字，在英文中是word，中文中是字，他们都是有具体意义的抽象表示，而所谓图像处理，
+  自然语言不像图像信息一样，自然语言的基本单位是文字，在英文中是word，中文中是字，他们都是有具体意义的抽象表示，而所谓图像处理，处理的本身就是图像信号，图像本身在采集或者创建好就是以数字形式存储在计算中。但是，重点来了，要使用统计的方法处理自然语言，就必须以一定的形式量化编码词，说简单一点，就是把符号形式的文字转化成数值，或者说嵌入到一个数学空间里，建立一个从文字到数学空间的映射。也就是所谓的词嵌入，而这里要将到的 [**word2vec**](https://en.wikipedia.org/wiki/Word2vec)便是常用的词嵌入的一种。
+
+- 如何进行词嵌入？
 
