--- a/_posts/2019-00-05-CS224n-notes-0x1.md
+++ b/_posts/2019-00-05-CS224n-notes-0x1.md
@@ -27,3 +27,10 @@ tags:
 
 - 如何进行词嵌入？
 
+  **word2vec** 是一种典型的词嵌入方法，使用一个全连接网络（输入层，隐含层，输出层）得到一个训练好的可以表征词向量的模型。
+
+### wrod2vec的一些具体含义
+
+- 比较直观的理解
+
+  比较通俗的解释方法是，我们把一个词转化成所谓向量，也就是把这个词进行了量化表示，一个比较直观的例子，颜色。我们都知道，颜色在计算机中通常使用rgb，也就是红绿蓝三原色进行编码，很自然的可以通过一个三维向量，比如蓝色（0，0，255），这就是一个经过编码的空间向量，但如果我们不知道所谓的蓝色的向量化表示呢？
