--- a/_posts/2019-00-05-CS224n-notes-0x1.md
+++ b/_posts/2019-00-05-CS224n-notes-0x1.md
@@ -33,13 +33,13 @@ tags:
 
 - 比较直观的理解
 
-  比较通俗的解释方法是，我们把一个词转化成所谓向量，也就是把这个词进行了量化表示，一个比较直观的例子，颜色。我们都知道，颜色在计算机中通常使用rgb，也就是红绿蓝三原色进行编码，很自然的可以通过一个三维向量，比如蓝色（0，0，255），这就是一个经过编码的空间向量，但如果我们不知道所谓的蓝色的向量化表示呢？这就是word2vec的意义所在，将蓝色这个直观意义上（假设）的**词语**，映射到一个三维的向量空间，也就是我们通常所称的rgb色彩空间。
+  比较通俗的解释方法是，我们把一个词转化成所谓向量，也就是把这个词进行了量化表示，一个比较直观的例子，颜色。我们都知道，颜色在计算机中通常使用rgb，也就是红绿蓝三原色进行编码，很自然的可以通过一个三维向量，比如蓝色（0，0，255），这就是一个经过编码的空间向量，但如果我们不知道所谓的蓝色的向量化表示呢？这就是word2vec的意义所在，将蓝色这个直观意义上（假设）的**词语**(word)，映射为一个三维向量空间的向量（vector），也就是我们通常所称的rgb色彩空间。
   
-  也就是：蓝色  -> （0，0，255）
+  也就是：蓝色 -> （0，0，255）
   
-  ​			   红色   ->   (255，0，0）
+  ​			     红色 ->   (255，0，0）
   
-  ​			   绿色   -> （0，255，0）
+    			   绿色 -> （0，255，0）
   
   假设上边三个向量是我们训练出来的，而不是一种基于确定标准的量化，那么有意思的事情来了。
   
@@ -81,8 +81,75 @@ tags:
 
   如图所示，该网络是一个由10个输入节点的输入层，5个隐含节点的隐含层，10个输出节点的输出层的全连接网络。
 
-- 参数推导
+- 参数推导(翻译自 Xin Rong的论文 arXiv:1411.2738v4 [cs.CL] 5 Jun 2016)
 
   我们以连续单上下文词预测单目标词的 CBOW（Continuous Bag-of-Word Model 连续词袋模型）进行参数的推导演示。
 
-  在输入层和输出层
+  在输入层和输出层之前的权重矩阵可以用一个 $V\times X$的矩阵来$W$来表示，$W$的每行，都是一个$N$维的向量记作$v_{\omega}$，对于$W$的第$i$行，对于给定上下文，假设$x_k= x_{k'}$，对于每个$k'\neq k$，我们有
+  $$
+  h=w^Tx=W^T_{k,.}:=v^T_{w_I} \tag1
+  $$
+  即本质上就是$W$对于$h$的第$k$行的复制，$V_{w_{I}}$是输入词的$w_I$的向量表示。这意味着隐含层神经元的激活函数是简单的线性函数。
+  
+  如图：
+  
+  ![](../img/weight_matrices.png)
+  
+  从隐含层到输出层存在另一个大小为$N\times V$权重矩阵 $W'={w'_{ij}}$，使用这个矩阵，我们可以计算出每个词汇在整个词汇表中的分数值（score）,
+  $$
+  u_j=v_{w_j}^Th\tag2
+  $$
+  其中 $v'_{w_j}$是矩阵$W'$的第*j*列。然后，我们可以使用soft-max，一个log-linear分类器模型,来获得随后词汇的分布结果，它是一个多项式形式的分布。
+  $$
+  p(w_j|w_I)=y_j=\frac{exp(u_j)}{\sum_{j'=1}^{V}{u_j'}}\tag3
+  $$
+  
+  
+  其中$y_j$是输出层第*j*个神经元的输出，(1)式，(2)式代入(3)中，我们就可以得到如下式子：
+  $$
+  p(w_j|w_I)=\frac{v'^T_{wj}v_{wI}}{\sum_{j'=1}^{V}exp(v'^{T}_{wj'}v_{wI})}
+  $$
+  
+    注意：$v_w$和$v'_w$是$w$的两种表示方式。$v_w$来自输入层到隐含层的权重矩阵**W**的行，而$v'_w$来自隐含层到输出层的权重矩阵**W**的列。在随后的分析中，我们把$v_w$称作词*w*的"输入矩阵"，$v'_w$称作词*w*的输出矩阵。
+  
+  随后，我们就可以使用梯度下降法进行参数更新和训练。
+  
+- 直观演示
+
+  这里使用了 Xin Rong论文中给的 [wevi](https://ronxin.github.io/wevi/)进行直观演示（上文中的图也是）
+
+  - 网络结构（如上图网络结构）
+
+  - 训练数据(context|target)
+
+    ```json
+    eat|apple,eat|orange,eat|rice,drink|juice,drink|milk,drink|water,orange|juice,apple|juice,rice|milk,milk|drink,water|drink,juice|drink
+    ```
+
+  - 初始状态（如上图所示矩阵）
+
+  - 当我们训练500次时，两权重矩阵的变化如下：
+
+    ![](../img/trained_matrices.png)
+
+  注意观察，这里orange和juice的词汇向量很相似，也就说明了这两个自然词汇之间存在的关系，基于我们的常识，orange juice 是一种非常合适的组合。类似的，网络结构中可以看出：
+
+  ![](../img/trained_network.png)
+
+  由上图也可以看出，drink和milk、juice、water同时出现的概率较大，这也符合自然经验。
+
+  其他诸如隐含层节点的一些有意思的性质，可以自行前往常识。
+
+---
+
+参考资料：
+
+ Xin Rong *word2vec Parameter Learning Explained*
+
+https://zhuanlan.zhihu.com/p/26306795 
+
+https://gist.github.com/aparrish/2f562e3737544cf29aaf1af30362f469 
+
+https://www.youtube.com/watch?v=D-ekE-Wlcds&feature=youtu.be
+
+**Rong Xin 于2017年驾驶飞机失事** ，感谢他对人类做出的科研贡献 R.I.P.
