--- a/_posts/2019-00-05-CS224n-notes-0x1.md
+++ b/_posts/2019-00-05-CS224n-notes-0x1.md
@@ -85,32 +85,32 @@ tags:
 
   我们以连续单上下文词预测单目标词的 CBOW（Continuous Bag-of-Word Model 连续词袋模型）进行参数的推导演示。
 
-  在输入层和输出层之前的权重矩阵可以用一个 $V\times X$的矩阵来$W$来表示，$W$的每行，都是一个$N$维的向量记作$v_{\omega}$，对于$W$的第$i$行，对于给定上下文，假设$x_k= x_{k'}$，对于每个$k'\neq k$，我们有
+  在输入层和输出层之前的权重矩阵可以用一个 $$V\times X$$的矩阵来$$W$$来表示，$$W$$的每行，都是一个$$N$$维的向量记作$$v_{\omega}$$，对于$$W$$的第$$i$$行，对于给定上下文，假设$$x_k= x_{k'}$$，对于每个$$k'\neq k$$，我们有
   $$
   h=w^Tx=W^T_{k,.}:=v^T_{w_I} \tag1
   $$
-  即本质上就是$W$对于$h$的第$k$行的复制，$V_{w_{I}}$是输入词的$w_I$的向量表示。这意味着隐含层神经元的激活函数是简单的线性函数。
+  即本质上就是$$W$$对于$$h$$的第$$k$$行的复制，$$V_{w_{I}}$$是输入词的$$w_I$$的向量表示。这意味着隐含层神经元的激活函数是简单的线性函数。
   
   如图：
   
   ![](../img/weight_matrices.png)
   
-  从隐含层到输出层存在另一个大小为$N\times V$权重矩阵 $W'={w'_{ij}}$，使用这个矩阵，我们可以计算出每个词汇在整个词汇表中的分数值（score）,
+  从隐含层到输出层存在另一个大小为$$N\times V$$权重矩阵 $$W'={w'_{ij}}$$，使用这个矩阵，我们可以计算出每个词汇在整个词汇表中的分数值（score）,
   $$
   u_j=v_{w_j}^Th\tag2
   $$
-  其中 $v'_{w_j}$是矩阵$W'$的第*j*列。然后，我们可以使用soft-max，一个log-linear分类器模型,来获得随后词汇的分布结果，它是一个多项式形式的分布。
+  其中 $$v'_{w_j}$$是矩阵$$W'$$的第*j*列。然后，我们可以使用soft-max，一个log-linear分类器模型,来获得随后词汇的分布结果，它是一个多项式形式的分布。
   $$
   p(w_j|w_I)=y_j=\frac{exp(u_j)}{\sum_{j'=1}^{V}{u_j'}}\tag3
   $$
   
   
-  其中$y_j$是输出层第*j*个神经元的输出，(1)式，(2)式代入(3)中，我们就可以得到如下式子：
+  其中$$y_j$$是输出层第*j*个神经元的输出，(1)式，(2)式代入(3)中，我们就可以得到如下式子：
   $$
   p(w_j|w_I)=\frac{v'^T_{wj}v_{wI}}{\sum_{j'=1}^{V}exp(v'^{T}_{wj'}v_{wI})}
   $$
   
-    注意：$v_w$和$v'_w$是$w$的两种表示方式。$v_w$来自输入层到隐含层的权重矩阵**W**的行，而$v'_w$来自隐含层到输出层的权重矩阵**W**的列。在随后的分析中，我们把$v_w$称作词*w*的"输入矩阵"，$v'_w$称作词*w*的输出矩阵。
+    注意：$$v_w$$和$$v'_w$$是$$w$$的两种表示方式。$$v_w$$来自输入层到隐含层的权重矩阵**W**的行，而$$v'_w$$来自隐含层到输出层的权重矩阵**W**的列。在随后的分析中，我们把$$v_w$$称作词*w*的"输入矩阵"，$$v'_w$$称作词*w*的输出矩阵。
   
   随后，我们就可以使用梯度下降法进行参数更新和训练。
   
