--- a/_posts/2021-02-09-考研心得.md
+++ b/_posts/2021-02-09-考研心得.md
@@ -5,7 +5,7 @@ subtitle:   " \"一年以来的收获与经验教训总结\""
 date:       2021-02-09 17:40:00
 author:     "Rumia"
 catalog: true
-category: 生活
+category: blog
 tags:
     - 考研
 ---
