--- a/_posts/2021-2-13-合并硬盘分区的两种方法.md
+++ b/_posts/2021-2-13-合并硬盘分区的两种方法.md
@@ -19,41 +19,41 @@ tags:
 
 2. 打开管理
 
-   ![image-20210213163844872](C:\Users\Rumia\AppData\Roaming\Typora\typora-user-images\image-20210213163844872.png)
+   ![image-20210213163844872](https://i.loli.net/2021/02/13/d2rB8L5GAeEoNIK.png)
 
 3. 打开磁盘管理
 
-   ![image-20210213164106789](C:\Users\Rumia\AppData\Roaming\Typora\typora-user-images\image-20210213164106789.png)
+   ![image-20210213164106789](https://i.loli.net/2021/02/13/tZMVKqNAeUzHFCP.png)
 
    可以看到我这里显示是磁盘0和磁盘1，代表我的计算机上装有两个实体硬盘，不是同一个实体硬盘不能合并分区（固态硬盘和机械硬盘）
 
    
 
 4. 删除某磁盘分区
-   
-   ![image-20210213164426409](C:\Users\Rumia\AppData\Roaming\Typora\typora-user-images\image-20210213164426409.png)
+  
+   ![image-20210213164426409](https://i.loli.net/2021/02/13/Lgw1JKUEISxd5Rz.png)
    
    这里正好有一个我不需要的分区，可以合并，在你的电脑上应该显示为你想被合并进去的那块磁盘（这块盘数据会丢失）
    
    删除完之后会显示为未分配状态
    
-   ![image-20210213164552538](C:\Users\Rumia\AppData\Roaming\Typora\typora-user-images\image-20210213164552538.png)
+   ![image-20210213164552538](https://i.loli.net/2021/02/13/LoBaxtl9VYGJbZC.png)
    
 5. 合并磁盘
 
    在想要合并进去的磁盘分区上点击拓展卷
 
-   ![image-20210213164833210](C:\Users\Rumia\AppData\Roaming\Typora\typora-user-images\image-20210213164833210.png)
+   ![image-20210213164833210](https://i.loli.net/2021/02/13/cRmN8TMDr9GLt3H.png)
 
    接下来的操作流程：
 
-   ![image-20210213164921221](C:\Users\Rumia\AppData\Roaming\Typora\typora-user-images\image-20210213164921221.png)
+   ![image-20210213164921221](https://i.loli.net/2021/02/13/yzDkTCAUcXRZB18.png)
 
-   ![image-20210213165040728](C:\Users\Rumia\AppData\Roaming\Typora\typora-user-images\image-20210213165040728.png)
+   ![image-20210213165040728](https://i.loli.net/2021/02/13/4WGEUVqfNyimwCP.png)
 
    这里可能会被自动添加过去，点击下一步，完成即可。
 
-   ![image-20210213165138153](C:\Users\Rumia\AppData\Roaming\Typora\typora-user-images\image-20210213165138153.png)
+   ![image-20210213165138153](https://i.loli.net/2021/02/13/4WGEUVqfNyimwCP.png)
 
    
 
